Using MySqlInterface to input db info, added: post signature

--- a/index/styles/index_style.css
+++ b/index/styles/index_style.css
@@ -41,6 +41,16 @@ body
 	background: lime;
 }
 
+.posts .postsignature
+{
+	position: absolute;
+	background: grey;
+	top: 390px;
+	left: 170px;
+	width: 840px;
+	height: 50px;
+}
+
 .footer
 {
 	position: absolute;
